Added comment so we know when it's live

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ canonical: /timber
 version: v1.1.0
 ---
 
+<!-- gh-pages -->
+
 <div class="cta-wrapper">
   <header class="pagewidth home-cta">
     <h1 class="home-title">Timber</h1>
