Replaced ref parameters with analytics utms

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ git clone https://github.com/Shopify/Timber.git
           </div>
           <div class="grid-item one-half small--one-whole">
             <h4 class="docs-h4">Selling Shopify Themes</h4>
-            <p class="docs-text">You can sell your theme in <a href="https://themes.shopify.com?ref=Timber" class="docs-link">Shopify's Theme Store</a> by following our <a href="https://themes.shopify.com/services/themes/guidelines?ref=Timber" class="docs-link">Guideline Checklist</a>. You can also earn 20% of each customer’s bill that you refer to Shopify by enrolling in the <a href="http://www.shopify.com/partners?ref=Timber" class="docs-link">Shopify Partner Program</a>.</p>
+            <p class="docs-text">You can sell your theme in <a href="https://themes.shopify.com?utm_source=Timber&utm_medium=os" class="docs-link">Shopify's Theme Store</a> by following our <a href="https://themes.shopify.com/services/themes/guidelines?utm_source=Timber&utm_medium=os" class="docs-link">Guideline Checklist</a>. You can also earn 20% of each customer’s bill that you refer to Shopify by enrolling in the <a href="http://www.shopify.com/partners?utm_source=Timber&utm_medium=os" class="docs-link">Shopify Partner Program</a>.</p>
           </div>
         </div>
 
@@ -114,13 +114,13 @@ git clone https://github.com/Shopify/Timber.git
         <h2 class="doc-title gettingstarted-title" id="demos"><strong>1.4 </strong>Demo Store</h2>
         <div class="grid">
           <div class="grid-item large--two-thirds">
-            <p class="docs-note">Enough gibber jabber. Check out <a href="https://timber-demo.myshopify.com?ref=Timber" title="View Timber Theme" class="docs-link" data-track="Demo">Timber's Demo Store</a> for the full experience of what you'll download.</p>
+            <p class="docs-note">Enough gibber jabber. Check out <a href="https://timber-demo.myshopify.com?utm_source=Timber&utm_medium=os" title="View Timber Theme" class="docs-link" data-track="Demo">Timber's Demo Store</a> for the full experience of what you'll download.</p>
           </div>
           <div class="grid-item large--one-third">
-            <a href="https://timber-demo.myshopify.com?ref=Timber" title="View Demo Store" class="btn-timber-small full" data-track="Demo">View Demo Store</a>
+            <a href="https://timber-demo.myshopify.com?utm_source=Timber&utm_medium=os" title="View Demo Store" class="btn-timber-small full" data-track="Demo">View Demo Store</a>
           </div>
         </div>
-        <p class="docs-text">The demo has fake products inserted so you can see what a populated site would look like. To see what your brand new site will look like when you install the theme, check out our <a href="http://timber-demo-empty.myshopify.com?ref=Timber" class="docs-link" data-track="Demo Empty">empty store demo</a>.</p>
+        <p class="docs-text">The demo has fake products inserted so you can see what a populated site would look like. To see what your brand new site will look like when you install the theme, check out our <a href="http://timber-demo-empty.myshopify.com?utm_source=Timber&utm_medium=os" class="docs-link" data-track="Demo Empty">empty store demo</a>.</p>
 
         <hr>
 
@@ -128,7 +128,7 @@ git clone https://github.com/Shopify/Timber.git
           THEME EDITING
         ===================================== -->
         <h2 class="doc-title gettingstarted-title" id="theme-editing"><strong>1.5 </strong>Theme Editing</h2>
-        <p class="docs-note">Edit your files locally and watch the changes happen on your live site. Use the <a href="https://github.com/Shopify/shopify_theme" class="docs-link">Theme Gem</a> or <a href="https://apps.shopify.com/desktop-theme-editor?ref=Timber" class="docs-link">Desktop Theme Editor</a> for easy theme management.</p>
+        <p class="docs-note">Edit your files locally and watch the changes happen on your live site. Use the <a href="https://github.com/Shopify/shopify_theme" class="docs-link">Theme Gem</a> or <a href="https://apps.shopify.com/desktop-theme-editor?utm_source=Timber&utm_medium=os" class="docs-link">Desktop Theme Editor</a> for easy theme management.</p>
         <p class="docs-text">Once you've downloaded your theme it's time to get it onto your store. Either upload the zip to <code>your-url.com/admin/themes</code> or use one of the programs below. Either way, you can use your text editor of choice.</p>
 
         <div class="grid">
@@ -817,8 +817,8 @@ Output:
           PAGINATION
         ===================================== -->
         <h2 class="doc-title module-title" id="pagination"><strong>3.1 </strong>Pagination</h2>
-        <p class="docs-text">Documentation - <a href="http://docs.shopify.com/themes/liquid-variables/paginate?ref=Timber" class="docs-link">http://docs.shopify.com/themes/liquid-variables/paginate</a></p>
-        <p class="docs-text">Pagination will only work when you're trying to access an available object. The snippets below paginates through the <strong class="docs-strong">blogs.news.articles</strong> object, so would only function properly on <strong class="docs-strong">blog.liquid</strong>. View the documentation for <a href="http://docs.shopify.com/themes/liquid-variables/paginate?ref=Timber" class="docs-link">other areas that can be paginated</a>.</p>
+        <p class="docs-text">Documentation - <a href="http://docs.shopify.com/themes/liquid-variables/paginate?utm_source=Timber&utm_medium=os" class="docs-link">http://docs.shopify.com/themes/liquid-variables/paginate</a></p>
+        <p class="docs-text">Pagination will only work when you're trying to access an available object. The snippets below paginates through the <strong class="docs-strong">blogs.news.articles</strong> object, so would only function properly on <strong class="docs-strong">blog.liquid</strong>. View the documentation for <a href="http://docs.shopify.com/themes/liquid-variables/paginate?utm_source=Timber&utm_medium=os" class="docs-link">other areas that can be paginated</a>.</p>
         <p class="docs-text">The <code>paginate</code> liquid tag can limit how many articles are shown per page by wrapping the <strong>article loop</strong> with it.</p>
         <p class="docs-text">The code lives in <strong class="docs-strong">snippet/pagination-custom</strong>.</p>
 
@@ -930,7 +930,7 @@ Output:
           TAGS
         ===================================== -->
         <h2 class="doc-title module-title" id="tags"><strong>3.2 </strong>Tags</h2>
-        <p class="docs-text">Documentation - <a href="http://docs.shopify.com/themes/liquid-variables/article?ref=Timber" class="docs-link">http://docs.shopify.com/themes/liquid-variables/article</a></p>
+        <p class="docs-text">Documentation - <a href="http://docs.shopify.com/themes/liquid-variables/article?utm_source=Timber&utm_medium=os" class="docs-link">http://docs.shopify.com/themes/liquid-variables/article</a></p>
         <p class="docs-text">Get an article's tags with a simple <code>for</code> loop. The example below also adds a comma after each tag, unless it's the last one.</p>
         <p class="docs-text">The code lives in <strong class="docs-strong">snippet/tags-article</strong>.</p>
 
@@ -964,7 +964,7 @@ Output:
           BREADCRUMBS
         ===================================== -->
         <h2 class="doc-title module-title" id="breadcrumbs"><strong>3.3 </strong>Breadcrumbs</h2>
-        <p class="docs-text">Documentation - <a href="http://docs.shopify.com/support/your-website/navigation/creating-a-breadcrumb-navigation?ref=Timber" class="docs-link">http://docs.shopify.com/support/your-website/navigation/creating-a-breadcrumb-navigation</a></p>
+        <p class="docs-text">Documentation - <a href="http://docs.shopify.com/support/your-website/navigation/creating-a-breadcrumb-navigation?utm_source=Timber&utm_medium=os" class="docs-link">http://docs.shopify.com/support/your-website/navigation/creating-a-breadcrumb-navigation</a></p>
         <p class="docs-text">The code lives in <strong class="docs-strong">snippet/breadcrumb</strong>.</p>
 
         <ul class="tabs">
@@ -1043,7 +1043,7 @@ Output:
           NEWSLETTER FIELD
         ===================================== -->
         <h2 class="doc-title module-title" id="newsletter"><strong>3.4 </strong>Newsletter Form</h2>
-        <p class="docs-text">Documentation - <a href="http://docs.shopify.com/support/configuration/store-customization/where-do-i-get-my-mailchimp-form-action?ref=Timber" class="docs-link">http://docs.shopify.com/support/configuration/store-customization/where-do-i-get-my-mailchimp-form-action</a></p>
+        <p class="docs-text">Documentation - <a href="http://docs.shopify.com/support/configuration/store-customization/where-do-i-get-my-mailchimp-form-action?utm_source=Timber&utm_medium=os" class="docs-link">http://docs.shopify.com/support/configuration/store-customization/where-do-i-get-my-mailchimp-form-action</a></p>
         <p class="docs-text"><a href="http://mailchimp.com/" title="Visit MailChimp.com"></a>MailChimp is the go-to newsletter service for Shopify. Use the link below to find your <strong class="docs-strong">MailChimp form action</strong> and insert it in your site settings.</p>
 
         <ul class="tabs">
