Updated default form selector

--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@ ajaxifyShopify.init({ [options] })
                 <td><a href="http://api.jquery.com/Types/#Selector" title="JS Selector" class="docs-link">Selector</a></td>
                 <td>
                   Your add to cart <strong>form</strong> selector from the product page.<br>
-                  Default: <strong class="docs-strong">form[action="/cart/add"]</strong>
+                  Default: <strong class="docs-strong">form[action^="/cart/add"]</strong>
                 </td>
               </tr>
               <tr>
