--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@ git clone https://github.com/Shopify/Timber.git
         <div class="grid">
           <div class="grid-item one-half small--one-whole">
             <h4 class="docs-h4">Dev Notes</h4>
-            <p class="docs-text">Shopify Timber Tested and working in IE 9+, Safari, Chrome, Firefox, Opera, Safari IOS, Browser and Chrome Android.</p>
+            <p class="docs-text">Shopify Timber tested and working in IE 9+, Safari, Chrome, Firefox, Opera, Safari IOS, Browser and Chrome Android.</p>
+            <p class="docs-text">Timber's layout is mobile-first, meaning larger screens use media queries to adjust the layout. Since IE8 doesn't support media queries natively, <a href="http://gavinballard.com/using-respond.js-with-shopify/" class="docs-link">click here to learn how to add IE8 media query support</a>.</p>
           </div>
           <div class="grid-item one-half small--one-whole">
             <h4 class="docs-h4">Selling Shopify Themes</h4>
