--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,7 @@ ajaxifyShopify.init({ [options] })
                 <td>prependDrawerTo</td>
                 <td><a href="http://api.jquery.com/Types/#Selector" title="JS Selector" class="docs-link">Selector</a></td>
                 <td>
-                  The selector for which element the drawer cart is appended to.
+                  The selector for which element the drawer cart is appended to.<br>
                   E.g. <code>prependDrawerTo: '#page'</code><br>
                   Default: <strong class="docs-strong">body</strong>
                 </td>
