Horizontal label fix

--- a/index.html
+++ b/index.html
@@ -1446,10 +1446,10 @@ jQuery(function($) {
         <form class="form-horizontal">
           <div class="grid">
             <div class="grid-item">
-              <label for="text1">Text Field</label>
-              <input type="text" id="text1" placeholder="First name">
-              <input type="text" id="text2" placeholder="Last name">
-              <select id="select1">
+              <label for="textHorizontal1">Horizontal Label</label>
+              <input type="text" id="textHorizontal1" placeholder="First name">
+              <input type="text" id="textHorizontal2" placeholder="Last name">
+              <select id="selectHorizontal1">
                 <option value="0">-- Choose --</option>
                 <option value="1">Option 1</option>
                 <option value="2">Option 2</option>
