Updated button helper classes

--- a/index.html
+++ b/index.html
@@ -1528,18 +1528,18 @@ jQuery(function($) {
         <div id="buttons-example" class="tab-content">
           <p>
             <a href="#" class="btn">Default Button</a>
-            <a href="#" class="btn small">Small Default Button</a>
+            <a href="#" class="btn btn--small">Small Default Button</a>
           </p>
           <p>
             <a href="#" class="btn-secondary">Secondary Button</a>
-            <a href="#" class="btn-secondary small">Small Secondary Button</a>
+            <a href="#" class="btn-secondary btn--small">Small Secondary Button</a>
           </p>
           <p>
             <a href="#" class="btn disabled">Disabled Button</a>
-            <a href="#" class="btn disabled small">Small Disabled Button</a>
+            <a href="#" class="btn disabled btn--small">Small Disabled Button</a>
           </p>
           <p>
-            <a href="#" class="btn full">Wide Button</a>
+            <a href="#" class="btn btn--full">Wide Button</a>
           </p>
         </div>
 
