--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Shopify Theme Development Framework - Timber
 description: Timber is a theme framework for Shopify that helps you get your store up and running quickly. It provides all required theme templates, a starter set of liquid tags, and some basic styles and modules for you to extend on.
 canonical: /timber
-version: v1.2.1
+version: v1.3.0
 ---
 
 <!-- gh-pages -->
@@ -1459,6 +1459,21 @@ jQuery(function($) {
               <input type="checkbox" id="checkInline"> <label for="checkInline" class="inline">Checkbox Label</label>
             </div>
           </div>
+        </form>
+
+        <hr class="hr-small">
+
+        <h4 class="docs-h4">Invisible Labels</h4>
+        <p class="docs-text">Add a class of <code>hidden-label</code> to a label to hide it, while keeping it accessible to screen readers. Use the <code>placeholder</code> attribute as your visible label.</p>
+        <p class="docs-text"><strong class="docs-strong">Note:</strong> The placeholder attribute only works in IE10+, so invisible labels are disabled in IE9 and below.</p>
+
+        <form class="form-horizontal">
+          <label for="testInvisibleLabel1" class="hidden-label">First Name</label>
+          <input type="text" id="testInvisibleLabel1" name="testInvisibleLabel1" placeholder="First Name">
+          <label for="testInvisibleLabel2" class="hidden-label">Last Name</label>
+          <input type="text" id="testInvisibleLabel2" name="testInvisibleLabel2" placeholder="Last Name">
+          <label for="testInvisibleLabel3" class="hidden-label">Email</label>
+          <input type="text" id="testInvisibleLabel3" name="testInvisibleLabel3" placeholder="Email">
         </form>
 
         <hr class="hr-small">
