Adding icon fonts

--- a/index.html
+++ b/index.html
@@ -1653,6 +1653,32 @@ jQuery(function($) {
 </pre>
         </div>
 
+        <!-- =====================================
+          Icon Font
+        ===================================== -->
+        <h2 class="doc-title styleguide-title" id="icons"><strong>5.5 </strong>Icon Font</h2>
+        <p class="docs-text">Timber offers a basic icon font for social and payment icons. Import <strong class="docs-strong">icons.svg</strong> into <a href="http://icomoon.io/app">IcoMoon</a> to make any changes.</p>
+        <p class="docs-text">These icons are <a href="http://filamentgroup.com/lab/bulletproof_icon_fonts.html">bulletproof</a>, meaning they can have text fallbacks when <code>@font-face</code> isn't supported.</p>
+
+        <ul class="tabs">
+          <li><a href="#icons-example">Example</a></li>
+          <li><a href="#icons-code">Code</a></li>
+        </ul>
+
+        <div id="icons-example" class="tab-content">
+          <ul class="inline-list">
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-twitter" aria-hidden="true"></span>
+                <span class="fallback-text">Twitter</span>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <div id="icons-code" class="tab-content">
+        </div>
+
       </div>
 
       <div class="grid-item large--one-quarter docs-nav-wrapper">
