Showcasing font icon demo

--- a/index.html
+++ b/index.html
@@ -1666,12 +1666,150 @@ jQuery(function($) {
         </ul>
 
         <div id="icons-example" class="tab-content">
-          <ul class="inline-list">
+          <ul class="inline-list icon-font-demo">
             <li>
               <div class="icon-fallback-text">
-                <span class="icon icon-twitter" aria-hidden="true"></span>
+                <span class="icon icon-cart"></span>
+                <span class="fallback-text">Cart</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-american_express"></span>
+                <span class="fallback-text">American Express</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-master"></span>
+                <span class="fallback-text">Master Card</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-visa"></span>
+                <span class="fallback-text">Visa</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-paypal"></span>
+                <span class="fallback-text">PayPal</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-discover"></span>
+                <span class="fallback-text">Discover</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-stripe"></span>
+                <span class="fallback-text">Stripe</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-interac"></span>
+                <span class="fallback-text">Interac</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-cirrus"></span>
+                <span class="fallback-text">Cirrus</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-google_wallet"></span>
+                <span class="fallback-text">Google Wallet</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-dk"></span>
+                <span class="fallback-text">DK</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-jcb"></span>
+                <span class="fallback-text">JCB</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-maestro"></span>
+                <span class="fallback-text">Maestro</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-diners_club"></span>
+                <span class="fallback-text">Diners Club</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-bitcoin"></span>
+                <span class="fallback-text">Bitcoin</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-tumblr"></span>
+                <span class="fallback-text">Tumblr</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-vimeo"></span>
+                <span class="fallback-text">Vimeo</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-youtube"></span>
+                <span class="fallback-text">YouTube</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-google"></span>
+                <span class="fallback-text">Google</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-twitter"></span>
                 <span class="fallback-text">Twitter</span>
-              </div>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-facebook"></span>
+                <span class="fallback-text">Facebook</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-pinterest"></span>
+                <span class="fallback-text">Pinterest</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-instagram"></span>
+                <span class="fallback-text">Instagram</span>
+              </span>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-fancy"></span>
+                <span class="fallback-text">Fancy</span>
+              </span>
             </li>
           </ul>
         </div>
