Added demo icon font codes

--- a/index.html
+++ b/index.html
@@ -1815,6 +1815,154 @@ jQuery(function($) {
         </div>
 
         <div id="icons-code" class="tab-content">
+<pre>
+&lt;ul class="inline-list icon-font-demo"&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-cart"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Cart&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-american_express"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;American Express&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-master"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Master Card&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-visa"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Visa&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-paypal"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;PayPal&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-discover"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Discover&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-stripe"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Stripe&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-interac"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Interac&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-cirrus"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Cirrus&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-google_wallet"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Google Wallet&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-dk"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;DK&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-jcb"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;JCB&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-maestro"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Maestro&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-diners_club"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Diners Club&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-bitcoin"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Bitcoin&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-tumblr"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Tumblr&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-vimeo"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Vimeo&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-youtube"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;YouTube&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-google"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Google&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-twitter"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Twitter&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-facebook"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Facebook&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-pinterest"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Pinterest&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-instagram"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Instagram&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-fancy"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Fancy&lt;/span&gt;
+    &lt;/span&gt;
+  &lt;/li&gt;
+&lt;/ul&gt;
+</pre>
         </div>
 
       </div>
