--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ git clone https://github.com/Shopify/Timber.git
         <h2 class="doc-title gettingstarted-title" id="demos"><strong>1.4 </strong>Demo Store</h2>
         <div class="grid">
           <div class="grid-item large--two-thirds">
-            <p class="docs-note">Enough gibber jabber. Check out <a href="https://timber-demo.myshopify.com?utm_source=Timber&utm_medium=os" title="View Timber Theme" class="docs-link" data-track="Demo">Timber's Demo Store</a> for the full experience of what you'll download.</p>
+            <p class="docs-note">Enough jibber-jabber. Check out <a href="https://timber-demo.myshopify.com?utm_source=Timber&utm_medium=os" title="View Timber Theme" class="docs-link" data-track="Demo">Timber's Demo Store</a> for the full experience of what you'll download.</p>
           </div>
           <div class="grid-item large--one-third">
             <a href="https://timber-demo.myshopify.com?utm_source=Timber&utm_medium=os" title="View Demo Store" class="btn-timber-small full" data-track="Demo">View Demo Store</a>
