change ref in docs to .medium-down io .mediumDown
in visibility table in docs

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ $breakpoints: (
                 <td class="is-hidden"></td>
               </tr>
               <tr>
-                <td class="text-left">.mediumDown--show</td>
+                <td class="text-left">.medium-down--show</td>
                 <td class="is-visible">Visible</td>
                 <td class="is-visible">Visible</td>
                 <td class="is-visible">Visible</td>
@@ -601,7 +601,7 @@ $breakpoints: (
                 <td class="is-hidden"></td>
               </tr>
               <tr>
-                <td class="text-left">.mediumDown--hide</td>
+                <td class="text-left">.medium-down--hide</td>
                 <td class="is-visible">Hidden</td>
                 <td class="is-visible">Hidden</td>
                 <td class="is-visible">Hidden</td>
