--- a/index.html
+++ b/index.html
@@ -1833,6 +1833,12 @@ jQuery(function($) {
                 <span class="fallback-text">Fancy</span>
               </span>
             </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-rss"></span>
+                <span class="fallback-text">RSS</span>
+              </span>
+            </li>
           </ul>
 
           <hr class="hr--small">
