RSS icon code example

--- a/index.html
+++ b/index.html
@@ -2010,6 +2010,12 @@ jQuery(function($) {
   &lt;/li&gt;
   &lt;li&gt;
     &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-rss"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;RSS&lt;/span&gt;
+    &lt;/div&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
       &lt;span class="icon icon-cart"&gt;&lt;/span&gt;
       &lt;span class="fallback-text"&gt;Cart&lt;/span&gt;
     &lt;/div&gt;
