Document classes added to addToCartSelector button

--- a/index.html
+++ b/index.html
@@ -1138,6 +1138,7 @@ ajaxifyShopify.init({ [options] })
                 <td><a href="http://api.jquery.com/Types/#Selector" title="JS Selector" class="docs-link">Selector</a></td>
                 <td>
                   Your add to cart <strong>button</strong> selector from the product page.<br>
+                  A class of <code>is-adding</code> is added to the button once clicked. <code>is-added</code> will take its place and remain on the button after the product is successfully added.<br>
                   Default: <strong class="docs-strong">input[type="submit']</strong> within <strong>formSelector</strong>
                 </td>
               </tr>
