Added hr classes to docs

--- a/index.html
+++ b/index.html
@@ -1394,7 +1394,15 @@ jQuery(function($) {
             </tr>
         </table>
 
+        <h4 class="docs-h4">Horizontal Rules</h4>
+        <h6>Default <code>hr</code></h6>
         <hr>
+
+        <h6>Invisible <code>hr.hr--clear</code></h6>
+        <hr class="hr--clear">
+
+        <h6>Small <code>hr.hr--small</code></h6>
+        <hr class="hr--small">
 
         <!-- =====================================
           Forms
