Updated timber stylesheet

--- a/index.html
+++ b/index.html
@@ -1404,6 +1404,8 @@ jQuery(function($) {
         <h6>Small <code>hr.hr--small</code></h6>
         <hr class="hr--small">
 
+        <hr class="hr--clear">
+
         <!-- =====================================
           Forms
         ===================================== -->
