Created misc elements area in styleguide

--- a/index.html
+++ b/index.html
@@ -1394,18 +1394,6 @@ jQuery(function($) {
             </tr>
         </table>
 
-        <h4 class="docs-h4">Horizontal Rules</h4>
-        <h6>Default <code>hr</code></h6>
-        <hr>
-
-        <h6>Invisible <code>hr.hr--clear</code></h6>
-        <hr class="hr--clear">
-
-        <h6>Small <code>hr.hr--small</code></h6>
-        <hr class="hr--small">
-
-        <hr class="hr--clear">
-
         <!-- =====================================
           Forms
         ===================================== -->
@@ -1685,9 +1673,25 @@ jQuery(function($) {
         </div>
 
         <!-- =====================================
+          Misc Elements
+        ===================================== -->
+        <h2 class="doc-title styleguide-title" id="misc"><strong>5.5 </strong>Misc. Elements</h2>
+        <h4 class="docs-h4">Horizontal Rules</h4>
+        <h6>Default <code>hr</code></h6>
+        <hr>
+
+        <h6>Invisible <code>hr.hr--clear</code></h6>
+        <hr class="hr--clear">
+
+        <h6>Small <code>hr.hr--small</code></h6>
+        <hr class="hr--small">
+
+        <hr class="hr--clear">
+
+        <!-- =====================================
           Icon Font
         ===================================== -->
-        <h2 class="doc-title styleguide-title" id="icons"><strong>5.5 </strong>Icon Font</h2>
+        <h2 class="doc-title styleguide-title" id="icons"><strong>5.6 </strong>Icon Font</h2>
         <p class="docs-text">Timber offers a basic icon font for social and payment icons. Import <strong class="docs-strong">icons.svg</strong> into <a href="http://icomoon.io/app">IcoMoon</a> to make any changes.</p>
         <p class="docs-text">These icons are <a href="http://filamentgroup.com/lab/bulletproof_icon_fonts.html">bulletproof</a>, meaning they can have text fallbacks when <code>@font-face</code> isn't supported.</p>
 
